<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF0000"
    tools:context="com.group26.myapplication.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/mostPopular"
                android:id="@+id/mostPopular"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/entertainment"
                android:id="@+id/entertainment"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/health"
                android:id="@+id/health"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/lifeStyle"
                android:id="@+id/lifestyle"
                android:layout_below="@+id/health"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/opinion"
                android:id="@+id/opnion"
                android:layout_below="@+id/lifestyle"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/politics"
                android:id="@+id/politics"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/scrollView"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/science"
                android:id="@+id/science"
                android:layout_below="@+id/politics"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/sports"
                android:id="@+id/sports"
                android:layout_below="@+id/science"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/tech"
                android:id="@+id/tech"
                android:layout_alignTop="@+id/science"
                android:layout_alignStart="@+id/politics" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/travel"
                android:id="@+id/travel"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_toEndOf="@+id/science"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#FFFFFF"
                android:text="@string/unitedStates"
                android:id="@+id/unitesStates"
                android:layout_below="@+id/sports"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>